# VLC_Ollama_Translate

./: README.md  pyproject.toml
lua/extensions/: chatgpt_translate.lua
scripts/: install.py
vlc_ollama_translate/: __init__.py  __main__.py  api_client.py  config.py  context.py  languages.py  model_limits.py  subtitle.py  translator.py
